unused and blob code removal